Updated commit message

--- a/.github/workflows/empty_commit.yml
+++ b/.github/workflows/empty_commit.yml
@@ -15,5 +15,5 @@ jobs:
         run: |
           git config user.name 'sree-hari-s'
           git config user.email 'sreeharis1999@gmail.com'
-          git commit --allow-empty -m "Trigger build"
+          git commit --allow-empty -m "empty commit to keep Streamlit app awake"
           git push origin main
