--- a/.github/workflows/Randomised_Commit.yml
+++ b/.github/workflows/Randomised_Commit.yml
@@ -1,4 +1,4 @@
-name: Random App.py Touch to Keep Streamlit Awake
+name: Keep Streamlit App Awake
 
 on:
   schedule:
@@ -6,11 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  maybe-touch-app:
+  maybe-append-comment:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Decide randomly whether to commit
+      - name: Decide randomly whether to update file
         id: random-check
         run: |
           SHOULD_COMMIT=$((RANDOM % 2))
@@ -20,15 +20,15 @@ jobs:
         if: steps.random-check.outputs.commit == '1'
         uses: actions/checkout@v4
 
-      - name: Modify app.py (same value)
+      - name: Append comment to app.py
         if: steps.random-check.outputs.commit == '1'
         run: |
-          sed -i 's/^NAME = .*/NAME = "Sreehari S"/' app.py
+          echo "# keep alive at $(date -u '+%Y-%m-%d %H:%M UTC')" >> app.py
 
-      - name: Commit and push
+      - name: Commit and push change
         if: steps.random-check.outputs.commit == '1'
         run: |
           git config user.name 'sree-hari-s'
           git config user.email 'sreeharis1999@gmail.com'
-          git commit -am "Touch app.py to keep Streamlit awake"
+          git commit -am "keep-alive: appended comment to app.py"
           git push origin main
